--- a/app/assets/stylesheets/dashboard/dashboard.sass
+++ b/app/assets/stylesheets/dashboard/dashboard.sass
@@ -27,13 +27,16 @@
 	display: flex
 	.left-column
 		flex-grow: 1
-		flex-shrink: 0
 		text-align: center
 		padding-right: 15px
+		flex-direction: row
+	
 		.picture
 			width: 90px
 			padding: 10px
 			border: 1px solid #333
+			&.tiny
+				width: 50px
 		.edit-picture
 			position: absolute
 			margin-left: -26px
@@ -93,7 +96,7 @@
 				overflow: hidden
 				&.show
 					display: block
-					height: 81px
+					height: 91px
 					&.big
 						height: 140px
 				.align-right
@@ -108,6 +111,7 @@
 						flex-grow: 1
 						display: inline-block	
 						text-align: left
+						padding-left: 15px
 						span:hover
 							text-decoration: underline
 						i
