--- a/app/views/users/_user_dashboard_panel.html.erb
+++ b/app/views/users/_user_dashboard_panel.html.erb
@@ -10,13 +10,16 @@
 			<br/><br/>
 			<div class="align-right">
 				<div class="file-name"><i class="mdi mdi-file"></i> <span class=""> <%= link_to  file_name,  content.url %></span></div>
+				<%unless admin === true  %>
 				<%= button_to "Delete", user_file_delete_url(:id => current_user.id, :attachment => name), :method=> :delete, :class => "custom-button" %>	
+				<%end%>
 				<a href="<%=  content.url%>" download="<%=  file_name %>"><button class="custom-button">Download</button></a>				
 			</div>
 		</div>
 	<% else %>
 		<div class="collapsible">
-			<br/><br/>
+			<%unless admin === true  %>
+				<br/><br/>
 				<%= form_for current_user, url: user_file_upload_path, html: { multipart: true }, :method => :POST do |form| %>
 				<div class="align-right">
 					<div class="file-name">
@@ -25,6 +28,9 @@
 					<%= form.submit "Upload", :class => "custom-button" %>
 				</div>
 				<% end %>
+			<%else%>
+				<p class="no-results">Not yet uploaded</p>
+			<%end%>	
 		</div>
 	<%end%>
 </div>
