--- a/app/views/student_application_form/_first_step.html.erb
+++ b/app/views/student_application_form/_first_step.html.erb
@@ -1,60 +1,63 @@
 <h2 class="form-subtitle">Sending Institution</h2>
 <p class="intro-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptafite velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-<%= form_for@sap, url: student_application_form_path, :method => :post do |f| %>
+
+<%= form_for sap, url: student_application_form_path, :method => :post do |f| %>
 
 <div class="field field_inst_sending_name">
   <div class="flex-container">
     <%= f.label :inst_sending_name %><br />
-    <%= f.text_field :inst_sending_name, autofocus: true, autocomplete: "inst_sending_name" %>
+    <%= f.text_field :inst_sending_name, autofocus: true, autocomplete: "inst_sending_name", disabled: review %>
   </div>
 </div>
 
 <div class="field field_erasmus_code">
  <div class="flex-container">
   <%= f.label :erasmus_code %><br />
-  <%= f.text_field :erasmus_code, autofocus: true, autocomplete: "erasmus_code" %>
+  <%= f.text_field :erasmus_code, autofocus: true, autocomplete: "erasmus_code", disabled: review %>
 </div>
 </div>
 <div class="field field_dept_coordinator">
   <div class="flex-container">
     <%= f.label :dept_coordinator %><br />
-    <%= f.text_field :dept_coordinator, autofocus: true, autocomplete: "dept_coordinator" %>
+    <%= f.text_field :dept_coordinator, autofocus: true, autocomplete: "dept_coordinator", disabled: review %>
   </div>
 </div>
 <div class="field field_school_family_dpt">
  <div class="flex-container">
   <%= f.label :school_family_dpt %><br />
-  <%= f.text_field :school_family_dpt, autofocus: true, autocomplete: "school_family_dpt" %>
+  <%= f.text_field :school_family_dpt, autofocus: true, autocomplete: "school_family_dpt", disabled: review %>
 </div>
 </div>
 
 <div class="field field_inst_adress">
   <div class="flex-container">
     <%= f.label :inst_adress %><br />
-    <%= f.text_field :inst_adress, autofocus: true, autocomplete: "inst_adress" %>
+    <%= f.text_field :inst_adress, autofocus: true, autocomplete: "inst_adress", disabled: review %>
   </div>
 </div>
 
 <div class="field field_contact_person">
  <div class="flex-container">
   <%= f.label :contact_person %><br />
-  <%= f.text_field :contact_person, autofocus: true, autocomplete: "contact_person" %>
+  <%= f.text_field :contact_person, autofocus: true, autocomplete: "contact_person", disabled: review %>
 </div>
 </div>
 <div class="field field_inst_telephone">
   <div class="flex-container">
     <%= f.label :inst_telephone %><br />
-    <%= f.text_field :inst_telephone, autofocus: true, autocomplete: "inst_telephone" %>
+    <%= f.text_field :inst_telephone, autofocus: true, autocomplete: "inst_telephone", disabled: review %>
   </div>
 </div>
 
 <div class="field field_inst_email">
   <div class="flex-container">
     <%= f.label :inst_email %><br />
-    <%= f.text_field :inst_email, autofocus: true, autocomplete: "inst_telephone" %>
+    <%= f.text_field :inst_email, autofocus: true, autocomplete: "inst_telephone", disabled: review %>
   </div>
 </div>
-<div class="actions">
-  <%= f.submit "Save current page", label: false, :class => "custom-button" %>
-</div>
+<% unless review %>
+  <div class="actions">
+    <%= f.submit "Save current page", label: false, :class => "custom-button" %>
+  </div>
+<% end %>
 <%end%>
