--- a/app/views/student_application_form/_third_step.erb
+++ b/app/views/student_application_form/_third_step.erb
@@ -1,7 +1,7 @@
 <h2 class="form-subtitle">Study year</h2>
 <p class="intro-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-<%= form_for@sap, url: student_application_form_path, :method => :post do |f| %>
+<%= form_for sap, url: student_application_form_path, :method => :post do |f| %>
 
 <div class="field">
   <div class="flex-container">
@@ -13,7 +13,7 @@
       '2019-2020: Fall Semester',
       '2019-2020: Spring Semester',
       '2019-2020: Academic Year',
-      ] %>
+      ],{}, {disabled: review}%>
     </div>
   </div>
 
@@ -27,17 +27,19 @@
         'Bilateral Agreement',
         'Visiting Student',
         'SICUE/SENECA',
-        ] %>
+        ],{}, {disabled: review} %>
       </div>
     </div>
 
     <div class="field">
       <div class="flex-container">
         <%= f.label :field_of_study %><br />
-        <%= f.text_field :field_of_study, autofocus: true, autocomplete: "field_of_study", :value => "Telecommunication Engineering" %>
+        <%= f.text_field :field_of_study, autofocus: true, autocomplete: "field_of_study", :value => "Telecommunication Engineering", disabled: review %>
       </div>
     </div>
+    <% unless review %>
     <div class="actions">
       <%= f.submit "Save current page", label: false, :class => "custom-button" %>
     </div>
+    <%end%>
     <%end%>
