--- a/app/views/student_application_form/review_student_application_form.html.erb
+++ b/app/views/student_application_form/review_student_application_form.html.erb
@@ -8,13 +8,13 @@
         </div>
         <% for i in 1..6 do %>
             <%if params[:step].to_i > i %>
-                <%= link_to "<span class='progress-ball previous-step'></span>".html_safe, "review_student_application_form/#{params[:user]}" + "/#{i}"%>
+                <%= link_to "<span class='progress-ball previous-step'></span>".html_safe, "/review_student_application_form/#{params[:user]}" + "/#{i}"%>
             <%end%>
             <%if params[:step].to_i === i %>
-                <%= link_to "<span class='progress-ball current-step'></span>".html_safe, "review_student_application_form/#{params[:user]}" + "/#{i}"%>
+                <%= link_to "<span class='progress-ball current-step'></span>".html_safe, "/review_student_application_form/#{params[:user]}" + "/#{i}"%>
             <%end%>
             <%if params[:step].to_i < i %>
-                <%= link_to "<span class='progress-ball future-step'></span>".html_safe, "review_student_application_form/#{params[:user]}" + "/#{i}"%>
+                <%= link_to "<span class='progress-ball future-step'></span>".html_safe, "/review_student_application_form/#{params[:user]}" + "/#{i}"%>
             <%end%>
         <% end %>
     </div>
@@ -27,6 +27,6 @@
     <%end%>
     </div>
     </br>
-    <%= link_to "<button class='custom-button back-to-dashboard'> Back </button>".html_safe, admin_dashboard_path %>
+    <%= link_to "<button class='custom-button back-to-dashboard'> Back </button>".html_safe, "/review_dashboard/#{params[:user]}" %>
   </div>
 </div>
