--- a/app/views/student_application_form/_forth_step.erb
+++ b/app/views/student_application_form/_forth_step.erb
@@ -1,7 +1,10 @@
 <h2 class="form-subtitle">Language Competence</h2>
+<%if review%>
+<h3><%=name%></h3>
+<%end%>
 <p class="intro-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-<%= form_for sap, url: student_application_form_path, :method => :post do |f| %>
+<%= form_for sap, url: student_application_form_path, :html => { :id => "lang-form" } , :method => :post do |f| %>
 	<div class="field">
 	  <div class="flex-container">
 	    <%= f.label :mother_tongue %><br />
@@ -15,7 +18,44 @@
 	    <%= f.text_field :language_instruction, autofocus: true, autocomplete: "language_instruction", disabled: review %>
 	  </div>
 	</div>
+	<br/>
+	<br/>
 	<h2>Other languages</h2>
+	<div class="other-languages" style="display:block;width:100%;">
+	<% unless review %>
+		<button class="custom-button" id="add-lang" type="button">Add a new language</button>
+	<%end%>
+	<div class="lang-list">
+	<% if defined?(languages) %>
+		<% languages.each_with_index do |language,index|%>
+		<div class="lang">
+			<div class="field">
+				<div class="flex-container">
+					<input type="text" name="language<%=index%>" class="language-input" disabled="review" value="<%=language.value%>"/>
+				</div>
+			</div>
+			<div class="field">
+				<div class="flex-container">
+					<input type="checkbox" name="language<%=index%>" class="language-input" disabled="review" value="<%=language.value%>"/>
+				</div>
+			</div>
+			<div class="field">
+				<div class="flex-container">
+					<input type="checkbox" name="language<%=index%>" class="language-input" disabled="review" value="<%=language.value%>"/>
+				</div>
+			</div>
+			<div class="field">
+				<div class="flex-container">
+					<input type="checkbox" name="language<%=index%>" class="language-input" disabled="review" value="<%=language.value%>"/>
+				</div>
+			</div>
+		</div>
+		<% end %>
+	<% else %>
+		<!-- <p class="no-results" >No languages defined</p> -->
+	<% end %>
+	</div>
+	</div>
 <% unless review %>
 	<div class="actions">
 	  <%= f.submit "Save current page", label: false, :class => "custom-button", disabled: review %>
