--- a/app/assets/stylesheets/student_application_form/form.sass
+++ b/app/assets/stylesheets/student_application_form/form.sass
@@ -19,6 +19,8 @@
 		&.edit_student_application_form
 			display: flex
 			flex-wrap: wrap
+		.other-languages, .other-work
+			padding: 10px
 		.field
 			display: inline-block
 			padding: 15px !important
