--- a/app/views/student_application_form/_fifth_step.erb
+++ b/app/views/student_application_form/_fifth_step.erb
@@ -3,5 +3,48 @@
 <h3><%=name%></h3>
 <%end%>
 <p class="intro-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<%= form_for sap, url: student_application_form_path, :html => { :id => "work-form" } , :method => :post do |f| %>
 
-<br/>
+<div class="other-work" style="display:block; width:100%;">
+<% unless review %>
+	<button class="custom-button" id="add-work" type="button">Add a new work experience</button>
+<%end%>
+<div class="work-list">
+<% if defined?(work_experiences) %>
+	<% work_experiences.each_with_index do |work,index|%>
+	<div class="work">
+		<div class="field">
+			<div class="flex-container">
+				<input type="text" name="type" class="work-input" disabled="review" value="<%=work.value%>"/>
+			</div>
+		</div>
+		<div class="field">
+			<div class="flex-container">
+				<input type="text" name="firm_organisation" class="work-input" disabled="review" value="<%=work.currently_studying%>"/>
+			</div>
+		</div>
+		<div class="field">
+			<div class="flex-container">
+				<input type="text" name="dates" class="work-input" disabled="review" value="<%=work.able_follow_lectures%>"/>
+			</div>
+		</div>
+		<div class="field">
+			<div class="flex-container">
+				<input type="text" name="country" class="language-input" disabled="review" value="<%=work.value%>"/>
+			</div>
+		</div>
+		<button type="button" class="delete-work-button transparent-button action-button">
+			<i class="mdi mdi-close"></i></button>
+		</div>
+	<% end %>
+<% else %>
+	<!-- <p class="no-results" >No languages defined</p> -->
+<% end %>
+	</div>
+	</div>
+	<% unless review %>
+	<div class="actions">
+	  <%= f.submit "Save current page", label: false, :class => "custom-button", disabled: review %>
+	</div>
+	<%end%>
+<%end%>
