--- a/app/views/student_application_form/_forth_step.erb
+++ b/app/views/student_application_form/_forth_step.erb
@@ -21,7 +21,7 @@
 	<br/>
 	<br/>
 	<h2>Other languages</h2>
-	<div class="other-languages" style="display:block;width:100%;">
+	<div class="other-languages" style="display:block; width:100%;">
 	<% unless review %>
 		<button class="custom-button" id="add-lang" type="button">Add a new language</button>
 	<%end%>
@@ -31,32 +31,34 @@
 		<div class="lang">
 			<div class="field">
 				<div class="flex-container">
-					<input type="text" name="language<%=index%>" class="language-input" disabled="review" value="<%=language.value%>"/>
+					<input type="text" name="value" class="language-input" disabled="review" value="<%=language.value%>"/>
 				</div>
 			</div>
 			<div class="field">
 				<div class="flex-container">
-					<input type="checkbox" name="language<%=index%>" class="language-input" disabled="review" value="<%=language.value%>"/>
+					<input type="checkbox" name="currently_studying" class="language-input" disabled="review" value="<%=language.currently_studying%>"/>
 				</div>
 			</div>
 			<div class="field">
 				<div class="flex-container">
-					<input type="checkbox" name="language<%=index%>" class="language-input" disabled="review" value="<%=language.value%>"/>
+					<input type="checkbox" name="able_follow_lectures" class="language-input" disabled="review" value="<%=language.able_follow_lectures%>"/>
 				</div>
 			</div>
 			<div class="field">
 				<div class="flex-container">
-					<input type="checkbox" name="language<%=index%>" class="language-input" disabled="review" value="<%=language.value%>"/>
+					<input type="checkbox" name="able_follow_lectures_extra_preparation" class="language-input" disabled="review" value="<%=language.value%>"/>
 				</div>
 			</div>
-		</div>
+			<button type="button" class="delete-lang-button transparent-button action-button">
+				<i class="mdi mdi-close"></i></button>
+			</div>
 		<% end %>
 	<% else %>
 		<!-- <p class="no-results" >No languages defined</p> -->
 	<% end %>
 	</div>
 	</div>
-<% unless review %>
+	<% unless review %>
 	<div class="actions">
 	  <%= f.submit "Save current page", label: false, :class => "custom-button", disabled: review %>
 	</div>
