Fix typo Forth -> Fourth

--- a/app/assets/stylesheets/student_application_form/progress.sass
+++ b/app/assets/stylesheets/student_application_form/progress.sass
@@ -23,8 +23,13 @@
 			height: 7px
 			width: 7px
 		&.future-step
+			 
+		&.todo-step
 			background-color: white
 			border-color: $etsit_blue
+		&.done-step
+			background-color: $etsit_blue
+			border-color: white
 .progress-buttons
 		float: right
 @media (max-width: 628px)
