--- a/app/views/users/admin_dashboard.html.erb
+++ b/app/views/users/admin_dashboard.html.erb
@@ -113,6 +113,7 @@
           <span class="big-hidden">App Form: </span>
           <span class="dashboard-icon">
             <a href="/review_student_application_form/<%=user.id%>/1">
+            <%="#{user.student_application_form.completed_percentage}" %>
               <i  class="mdi mdi-clipboard-text app-form"></i>
             </a>
           </span>
@@ -147,7 +148,7 @@
         </div>
         <div class="user-<%= user.id %>-id flex-table-cell flex-table-pctg">
           <span class="big-hidden">Progress: </span>
-          <%= user.percentage %>
+          <%= "#{user.percentage}" %>
         </div>
         <% end %><br/>
         
