--- a/app/views/users/user_dashboard.html.erb
+++ b/app/views/users/user_dashboard.html.erb
@@ -22,13 +22,18 @@
 					<div class="progress-bar">
 						<div class="progress-line">
 						</div>
+						<% completed_steps_array = current_user.student_application_form.completed_steps_array %>
+						<% *prefix, last = completed_steps_array %>
+						<% final_steps_array = [*prefix, true, last] %>
 						<% for i in 1..6 do %>
-						<%= link_to "<span class='progress-ball future-step'></span>".html_safe, student_application_form_path + "/#{i}"%>
+							<% classBall = final_steps_array[i] ? "done-step" : "todo-step" %>
+							<% ball = "<span class='progress-ball  #{classBall}'></span>"%>
+							<%= link_to ball.html_safe, student_application_form_path + "/#{i}"%>
 						<% end %>
 					</div>
 				</div>
 				<div class="second-container-right">
-					<span class="student-application-form-progress">25%</span>
+					<span class="student-application-form-progress"><%=current_user.student_application_form.completed_percentage%></span>
 				</div>
 			</div>
 			<div class="collapsible big">
