--- a/app/views/users/admin_dashboard.html.erb
+++ b/app/views/users/admin_dashboard.html.erb
@@ -117,7 +117,7 @@
               <i  class="mdi mdi-clipboard-text app-form"></i>
             </a>
           </span>
-          <%= user.student_application_form.erasmus_code %>
+         <!--  <%= user.student_application_form.erasmus_code %> -->
         </div>
         <div class="user-<%= user.id %>-id flex-table-cell flex-table-mot-letter">
           <span class="big-hidden">Mot. Letter: </span>
