Add ajax form controller and route for cropped image

--- a/app/assets/stylesheets/dashboard/dashboard.sass
+++ b/app/assets/stylesheets/dashboard/dashboard.sass
@@ -23,6 +23,19 @@
 			.input-file
 			.custom-button
 				margin: 10px
+			.messages-from-server 
+				.message-from-server 
+					margin-top: 0
+					padding-left: 10px
+					&.notice
+						color: green
+					&.alert
+						color: red
+			#spinner
+				width: 60px
+				vertical-align: middle
+				&.hidden
+					display: none
 .dashboard-container 
 	display: flex
 	.left-column
