--- a/app/views/users/user_dashboard.html.erb
+++ b/app/views/users/user_dashboard.html.erb
@@ -43,7 +43,7 @@
 				<p class="intro-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 				<div class="align-right">
 					<button class="custom-button" disabled>Upload signed</button>
-					<button class="custom-button" disabled>Download</button>
+					<a download="application_form.pdf" href="/generate_pdf"><button class="custom-button" >Download</button></a>
 					<a href="<%=student_application_form_path%>"><button class="custom-button" >Edit data</button></a>
 
 				</div>
