Refactor PDF into new controller

--- a/app/views/users/review_dashboard.html.erb
+++ b/app/views/users/review_dashboard.html.erb
@@ -57,7 +57,7 @@
 			<div class="collapsible big">
 				<p class="intro-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 				<div class="align-right">
-					<button class="custom-button" disabled>Download</button>
+					<a href="<%="/generate_pdf/#{current_user.id}"%>"><button class="custom-button">Download</button></a>
 					<a href="<%="/review_student_application_form/#{current_user.id}/1"%>"><button class="custom-button" >Review data</button></a>
 
 				</div>
