--- a/app/views/users/_user_dashboard_panel.html.erb
+++ b/app/views/users/_user_dashboard_panel.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
 	<span class="dashboard-section" id="motivation-letter-tab">
 		<label for=<%=name%>>
-			<i class="caret mdi mdi-menu-down no-reverse"></i><%=label%>
+			<%=label%><i class="caret mdi mdi-menu-down no-reverse"></i>
 		</label>
 	</span>
 	<%unless content.blank? %>
